--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                      data-splitin="words"
                      data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1"
                      style="z-index: 5; max-width: inherit; max-height: inherit; white-space: nowrap;color: #fff;font-size:70px;font-family: lato">
-                    四川迈威国际文化有限公司
+                    四川迈威文化传播有限公司
                 </div>
 
                 <div class="hidden-xs tp-caption  sfl tp-resizeme" data-x="430"
