--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="row">
                     <div class="col-md-6 section-top-align">
                         <figure class="imghvr-slide-up img-responsive">
-                            <img src="images/portfolio5.jpg" alt="gallery3" />
+                            <img src="images/tsn_01_640.jpg" alt="gallery3" />
                         </figure>
                     </div>
                     <div class="col-md-6">
@@ -162,7 +162,7 @@
                 <div class="row">
                     <div class="col-md-6 section-top-align">
                         <figure class="imghvr-slide-up img-responsive">
-                            <img src="images/gallery2.jpg" alt="gallery3" />
+                            <img src="images/tsn_17_640.jpg" alt="gallery3" />
                         </figure>
                     </div>
                     <div class="col-md-6">
@@ -179,7 +179,7 @@
                 <div class="row">
                     <div class="col-md-6 section-top-align">
                         <figure class="imghvr-slide-up img-responsive">
-                            <img src="images/newsroom3.jpg" alt="gallery3" />
+                            <img src="images/baima_11_640.jpg" alt="gallery3" />
                         </figure>
                     </div>
                     <div class="col-md-6">
@@ -193,7 +193,7 @@
                 <div class="row">
                     <div class="col-md-6 section-top-align">
                         <figure class="imghvr-slide-up img-responsive">
-                            <img src="images/gallery6.jpg" alt="gallery3" />
+                            <img src="images/baima_02_640.jpg" alt="gallery3" />
                         </figure>
                     </div>
                     <div class="col-md-6">
@@ -236,7 +236,7 @@
                 <div class="carousel-inner">
                     <div class="item active" data-interval="3000">
                         <figure class="imghvr-zoom-in">
-                            <img src="images/gallery2.jpg" alt="people" class="img-responsive">
+                            <img src="images/tsn_03_640.jpg" alt="people" class="img-responsive">
                             <figcaption>
                                 <div class="text-center">
 
@@ -252,7 +252,7 @@
                     </div>
                     <div class="item" data-interval="3000">
                         <figure class="imghvr-zoom-in">
-                            <img src="images/portfolio5.jpg" alt="people" class="img-responsive">
+                            <img src="images/tsn_17_640.jpg" alt="people" class="img-responsive">
                             <figcaption>
                                 <div class="text-center">
 
@@ -267,7 +267,7 @@
                     </div>
                     <div class="item" data-interval="3000">
                         <figure class="imghvr-zoom-in">
-                            <img src="images/newsroom3.jpg" alt="people" class="img-responsive">
+                            <img src="images/baima_11_640.jpg" alt="people" class="img-responsive">
                             <figcaption>
                                 <div class="text-center">
 
